err/smpp-server.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smpp'...
Compiling './lib/python3.5/site-packages/smpp/__init__.py'...
***   File "./lib/python3.5/site-packages/smpp/__init__.py", line 908
    print "Invalid optional param data, ignoring: %s" % (hex,)
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/smpp/esme.py'...
***   File "./lib/python3.5/site-packages/smpp/esme.py", line 46
    print '...', pdu['header']['sequence_number'],
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/smpp/smsc.py'...
***   File "./lib/python3.5/site-packages/smpp/smsc.py", line 15
    print 'Connected by', self.addr
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/smpp_server-0.1.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
